# construction-ppe-detection

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: detect.py  health.py
backend/app/core/: config.py  detector.py  logging.py
backend/docker/: Dockerfile  Dockerfile.dev
backend/requirements/: base.txt
backend/test_assets/: sample.avi
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py
backend/tests/unit/: test_config.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
